<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setupGridFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonArea">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttonArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chooseRobot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/robot" />

        <Button
            android:id="@+id/chooseBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/crate" />

        <Button
            android:id="@+id/chooseGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/goal" />

        <Button
            android:id="@+id/chooseUntraversable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/blocked" />
    </LinearLayout>
</RelativeLayout>